[gd_scene load_steps=2 format=3 uid="uid://bdl1tuvvhso66"]

[ext_resource type="Script" path="res://scripts/escenas/hud.gd" id="1_hvef2"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1152.0
offset_bottom = -648.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hvef2")

[node name="BoxContainer" type="BoxContainer" parent="."]
z_as_relative = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -43.5
offset_right = 46.5
offset_bottom = 43.5
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_constants/separation = 7
alignment = 1
vertical = true

[node name="ScoreLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VidaLabel" type="Label" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Vida"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Combustible" type="ProgressBar" parent="BoxContainer"]
layout_mode = 2
size_flags_vertical = 3
min_value = 0.01
value = 0.01

[node name="Disparos" type="Label" parent="BoxContainer"]
layout_mode = 2
text = "Disparos"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VidaBarra" type="ProgressBar" parent="BoxContainer"]
layout_mode = 2
